--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "~5.4.5"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.616.0",
+    "@aws-sdk/lib-dynamodb": "^3.616.0",
     "aws-cdk-lib": "2.147.0",
     "constructs": "^10.0.0",
     "date-fns": "^3.6.0",
